--- a/aula-5/package.json
+++ b/aula-5/package.json
@@ -9,7 +9,10 @@
   "author": "Marcelo de Castro",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.0",
+    "consign": "^0.1.2",
     "ejs": "^2.5.5",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mysql": "^2.13.0"
   }
 }
